--- a/Jiu Jitsu Assistant/Statistics.xaml
+++ b/Jiu Jitsu Assistant/Statistics.xaml
@@ -12,14 +12,31 @@
         Height="800px" Width="1300px" >
 
    <Grid>
-      <lvc:CartesianChart Series="{Binding SeriesCollection}" LegendLocation="Right" Margin="88,70,677,400" >
-         <lvc:CartesianChart.AxisY>
-            <lvc:Axis Title="Sales" LabelFormatter="{Binding YFormatter}"></lvc:Axis>
-         </lvc:CartesianChart.AxisY>
+      <Grid.ColumnDefinitions>
+         <ColumnDefinition Width="*"/>
+         <ColumnDefinition Width="*"/>
+      </Grid.ColumnDefinitions>
+      <lvc:CartesianChart Series="{Binding techniquesChronological}" LegendLocation="Right" Margin="242,85,62,376">
          <lvc:CartesianChart.AxisX>
-            <lvc:Axis Title="Month" Labels="{Binding Labels}"></lvc:Axis>
+            <lvc:Axis Title="Salesman" Labels="{Binding techniquesChronological_XFormatter}"></lvc:Axis>
          </lvc:CartesianChart.AxisX>
+         <lvc:CartesianChart.AxisY>
+            <lvc:Axis Title="Sold Apps" LabelFormatter="{Binding techniquesChronological_YFormatter}"></lvc:Axis>
+         </lvc:CartesianChart.AxisY>
       </lvc:CartesianChart>
+
+
+      <lvc:CartesianChart Series="{Binding myChronological}"  LegendLocation="Right" Margin="242,463,62,16"  Grid.Row="1" Grid.ColumnSpan="2">
+         <lvc:CartesianChart.AxisX>
+            <lvc:Axis Title="Year" LabelFormatter="{Binding myChronological_XFormatter}"></lvc:Axis>
+         </lvc:CartesianChart.AxisX>
+         <lvc:CartesianChart.AxisY>
+            <lvc:Axis Title="Count" LabelFormatter="{Binding myChronological_YFormatter}"></lvc:Axis>
+         </lvc:CartesianChart.AxisY>
+      </lvc:CartesianChart>
+      <Label x:Name="label" Content="Chronology of learned techniques" HorizontalAlignment="Left" Margin="43,429,0,0" VerticalAlignment="Top" Height="34" Width="380" FontSize="18"/>
+      <Label x:Name="label1" Content="Chronology of learned techniques" HorizontalAlignment="Left" Margin="43,40,0,0" VerticalAlignment="Top" Height="38" Width="380" RenderTransformOrigin="0.322,0.166" FontSize="22"/>
+
 
    </Grid>
 </Window>
