--- a/Jiu Jitsu Assistant/Statistics.xaml
+++ b/Jiu Jitsu Assistant/Statistics.xaml
@@ -2,41 +2,61 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"        
+        xmlns:extToolkit="http://schemas.xceed.com/wpf/xaml/toolkit"        
+        xmlns:sys="clr-namespace:System;assembly=mscorlib"
         xmlns:local="clr-namespace:Jiu_Jitsu_Assistant"
         xmlns:dv="clr-namespace:System.Windows.Controls.DataVisualization.Charting;assembly=System.Windows.Controls.DataVisualization.Toolkit"
         xmlns:lvc="clr-namespace:LiveCharts.Wpf;assembly=LiveCharts.Wpf"
         mc:Ignorable="d"
         Background="{DynamicResource {x:Static SystemColors.ControlBrushKey}}" 
         Title="Statistics" 
-        Height="800px" Width="1300px" >
+        Height="800px" Width="1300px" 
+        ResizeMode="NoResize" >
 
    <Grid>
       <Grid.ColumnDefinitions>
          <ColumnDefinition Width="*"/>
          <ColumnDefinition Width="*"/>
       </Grid.ColumnDefinitions>
-      <lvc:CartesianChart Series="{Binding techniquesChronological}" LegendLocation="Right" Margin="242,85,62,376">
+      <lvc:CartesianChart Series="{Binding BarChart}" LegendLocation="Right" Margin="162,100,0,372">
          <lvc:CartesianChart.AxisX>
-            <lvc:Axis Title="Salesman" Labels="{Binding techniquesChronological_XFormatter}"></lvc:Axis>
+            <lvc:Axis Labels="{Binding Labels_BarChart}"></lvc:Axis>
          </lvc:CartesianChart.AxisX>
          <lvc:CartesianChart.AxisY>
-            <lvc:Axis Title="Sold Apps" LabelFormatter="{Binding techniquesChronological_YFormatter}"></lvc:Axis>
+            <lvc:Axis Title="Learned techniques"></lvc:Axis>
          </lvc:CartesianChart.AxisY>
       </lvc:CartesianChart>
-
-
-      <lvc:CartesianChart Series="{Binding myChronological}"  LegendLocation="Right" Margin="242,463,62,16"  Grid.Row="1" Grid.ColumnSpan="2">
+      <!--
+      <Canvas HorizontalAlignment="Left" Height="264" VerticalAlignment="Top" Width="492" Grid.Column="2" Margin="109,57,0,0">
+         <Label x:Name="lbl" Content="Name:" HorizontalAlignment="Left" VerticalAlignment="Top" RenderTransformOrigin="0.211,-0.154" Canvas.Left="48" Canvas.Top="30" FontSize="14"/>
+         <extToolkit:WatermarkTextBox Name="techniqueName_textbox" Height="25" Canvas.Left="171" TextWrapping="Wrap" Canvas.Top="34" Width="235" Watermark="Technique name" TextChanged="emptyTechniqueNameCheck" />
+         <Label x:Name="lbl_Copy" Content="Date learned:" HorizontalAlignment="Left" VerticalAlignment="Top" RenderTransformOrigin="0.211,-0.154" Canvas.Left="48" Canvas.Top="80" FontSize="14"/>
+         <DatePicker Name="dateLearned_datepicker" Canvas.Left="171" Canvas.Top="83" Width="235" SelectedDate="{x:Static sys:DateTime.Now}"/>
+         <Label x:Name="lbl_Copy1" Content="Belt:" HorizontalAlignment="Left" VerticalAlignment="Top" RenderTransformOrigin="0.211,-0.154" Canvas.Left="48" Canvas.Top="130" FontSize="14"/>
+         <ComboBox x:Name="belt_comboBox" VerticalContentAlignment="Center" Canvas.Left="171" Canvas.Top="130" Width="235" Height="29">
+            <ComboBoxItem Name="cb_white" Background="White" IsSelected="True">white</ComboBoxItem>
+            <ComboBoxItem Name="cbi_blue" Background="#FF25A1F7">blue</ComboBoxItem>
+            <ComboBoxItem Name="cbi_purple" Background="Purple">purple</ComboBoxItem>
+            <ComboBoxItem Name="cbi_brown" Selected="cbi_brown_Selected" Background="#FFB2590F">brown</ComboBoxItem>
+            <ComboBoxItem Name="cbi_black" Background="Black" Foreground="White">black</ComboBoxItem>
+         </ComboBox>
+         <Label x:Name="label1" Content="Technique group" Canvas.Left="48" Canvas.Top="180"/>
+         <ComboBox x:Name="techniqueGroup_comboBox" VerticalAlignment="Center" Canvas.Left="171" Canvas.Top="180" Width="235" Height="26"/>
+         <Button x:Name="addTechnique_button" Content="Add" HorizontalAlignment="Left" VerticalAlignment="Top" Width="75" RenderTransformOrigin="0.507,0.773" Canvas.Left="331" Canvas.Top="232"
+                 IsEnabled="False" Click="AddNewTechnique" PreviewMouseDown="addTechnique_button_MouseDown"/>
+      </Canvas>
+      -->
+      <lvc:CartesianChart Series="{Binding myChronological}"  LegendLocation="Right" Margin="43,463,62,16" Grid.ColumnSpan="2">
          <lvc:CartesianChart.AxisX>
             <lvc:Axis Title="Year" LabelFormatter="{Binding myChronological_XFormatter}"></lvc:Axis>
          </lvc:CartesianChart.AxisX>
          <lvc:CartesianChart.AxisY>
-            <lvc:Axis Title="Count" LabelFormatter="{Binding myChronological_YFormatter}"></lvc:Axis>
+            <lvc:Axis Title="Count"></lvc:Axis>
          </lvc:CartesianChart.AxisY>
       </lvc:CartesianChart>
-      <Label x:Name="label" Content="Chronology of learned techniques" HorizontalAlignment="Left" Margin="43,429,0,0" VerticalAlignment="Top" Height="34" Width="380" FontSize="18"/>
-      <Label x:Name="label1" Content="Chronology of learned techniques" HorizontalAlignment="Left" Margin="43,40,0,0" VerticalAlignment="Top" Height="38" Width="380" RenderTransformOrigin="0.322,0.166" FontSize="22"/>
-
+      <Label x:Name="Cumulative_count_label" Content="Cumulative count of learned techniques" HorizontalAlignment="Left" Margin="43,429,0,0" VerticalAlignment="Top" Height="34" Width="380" FontSize="18"/>
+      <Label x:Name="Number_of_techniques_label" Content="Number of techniques learned per month" HorizontalAlignment="Left" Margin="43,40,0,0" VerticalAlignment="Top" Height="38" Width="380" RenderTransformOrigin="0.322,0.166" FontSize="18"/>
 
    </Grid>
 </Window>
