--- a/Jiu Jitsu Assistant/MainWindow.xaml
+++ b/Jiu Jitsu Assistant/MainWindow.xaml
@@ -8,44 +8,45 @@
         Title="Jiu Jitsu Assistant" 
         TextBlock.TextAlignment="Center" 
         ResizeMode="NoResize" 
-        Height="800px" Width="1300px" 
-        Background="{DynamicResource {x:Static SystemColors.ControlBrushKey}}">
+        Height="800px" Width="1300px"
+        Icon="/images/bjj-logo.png"
+        Name="window">
 
    <Grid Margin="2,0,-2,0">
       <Grid.ColumnDefinitions>
          <ColumnDefinition/>
-         <ColumnDefinition Width="0*"/>
+         <ColumnDefinition/>
+         <ColumnDefinition/>
       </Grid.ColumnDefinitions>
-      <Button x:Name="button" Content="Button" HorizontalAlignment="Center" VerticalAlignment="Center"  RenderTransformOrigin="0.811,0.976" Height="45" Width="240" FontSize="20">
-         <Button.Background>
-            <LinearGradientBrush EndPoint="0,1" StartPoint="0,0">
-               <GradientStop Color="#FFF3F3F3" Offset="0"/>
-               <GradientStop Color="#FFEBEBEB" Offset="0.5"/>
-               <GradientStop Color="#FFDDDDDD" Offset="0.5"/>
-               <GradientStop Color="#FFAE2F2F" Offset="1"/>
-            </LinearGradientBrush>
-         </Button.Background>
-      </Button>
-      <Button x:Name="My_Techniques_button" Content="My Techniques" Margin="0,150,0,0" HorizontalAlignment="Center" VerticalAlignment="Center" RenderTransformOrigin="0.811,0.976" Click="button_Copy_Click" Height="45" Width="240" FontSize="20">
-         <Button.Background>
-            <LinearGradientBrush EndPoint="0,1" StartPoint="0,0">
-               <GradientStop Color="#FFF3F3F3" Offset="0"/>
-               <GradientStop Color="#FFEBEBEB" Offset="0.5"/>
-               <GradientStop Color="#FFDDDDDD" Offset="0.5"/>
-               <GradientStop Color="#FF973434" Offset="1"/>
-            </LinearGradientBrush>
-         </Button.Background>
-      </Button>
-      <Button x:Name="Settings" Content="Statistics" HorizontalAlignment="Center" Margin="0,300,0,0" VerticalAlignment="Center"  RenderTransformOrigin="0.811,0.976" Height="45" Width="240" FontSize="20" Click="Settings_Click">
-         <Button.Background>
-            <LinearGradientBrush EndPoint="0,1" StartPoint="0,0">
-               <GradientStop Color="#FFF3F3F3" Offset="0"/>
-               <GradientStop Color="#FFEBEBEB" Offset="0.5"/>
-               <GradientStop Color="#FFDDDDDD" Offset="0.5"/>
-               <GradientStop Color="#FFB03636" Offset="1"/>
-            </LinearGradientBrush>
-         </Button.Background>
-      </Button>
 
+      <Grid.RowDefinitions>
+         <RowDefinition Height="*"/>
+         <RowDefinition Height="*"/>
+         <RowDefinition Height="*"/>
+      </Grid.RowDefinitions>
+
+      <TextBlock Grid.Row="0" Grid.Column="1" Margin="0,32,0,226" Grid.RowSpan="2">
+                 <Image Margin="0,0,5,5" Source="images/bjj-logo.png" />
+      </TextBlock>
+      <Button  Grid.Column="1" Grid.Row="1" x:Name="button" Content="Button" HorizontalAlignment="Center" VerticalAlignment="Center"  RenderTransformOrigin="0.811,0.976" Height="44" Width="412" FontSize="20" Margin="10,107" FontWeight="Bold">
+         <Button.Background>
+            <ImageBrush ImageSource="/images/white-belt.jpg" />
+         </Button.Background>
+      </Button>
+      <Button Grid.Column="1"  Grid.Row="1"  x:Name="My_Techniques_button" Content="My Techniques" Margin="10,181,10,31" HorizontalAlignment="Center" VerticalAlignment="Center" RenderTransformOrigin="0.811,0.976" Click="button_Copy_Click" Height="46" Width="412" FontSize="20" FontWeight="Bold">
+         <Button.Background>
+            <ImageBrush ImageSource="/images/blue-belt.jpg" />
+         </Button.Background>
+      </Button>
+      <Button Grid.Column="1"  Grid.Row="1" x:Name="Settings" Content="Statistics" HorizontalAlignment="Center" Margin="10,257,10,214" VerticalAlignment="Center"  RenderTransformOrigin="0.811,0.976" Height="44" Width="412" FontSize="20" Click="Settings_Click" Grid.RowSpan="2" FontWeight="Bold">
+         <Button.Background>
+            <ImageBrush ImageSource="/images/purple-belt.jpg" />
+         </Button.Background>
+      </Button>
+      <Button x:Name="button1" Content="Mind Maps" Grid.Column="1" HorizontalAlignment="Left" Margin="10,76,0,0" Grid.Row="2" VerticalAlignment="Top" Width="412" Height="44" FontSize="20" FontWeight="Bold">
+         <Button.Background>
+            <ImageBrush ImageSource="/images/brown-belt.jpg" />
+         </Button.Background>
+      </Button>
    </Grid>
 </Window>
