--- a/Jiu Jitsu Assistant/MainWindow.xaml
+++ b/Jiu Jitsu Assistant/MainWindow.xaml
@@ -28,22 +28,22 @@
       <TextBlock Grid.Row="0" Grid.Column="1" Margin="0,32,0,226" Grid.RowSpan="2">
                  <Image Margin="0,0,5,5" Source="images/bjj-logo.png" />
       </TextBlock>
-      <Button  Grid.Column="1" Grid.Row="1" x:Name="button" Content="Roll !" HorizontalAlignment="Center" VerticalAlignment="Center"  RenderTransformOrigin="0.811,0.976" Height="44" Width="412" FontSize="20" Margin="10,107" FontWeight="Bold">
+      <Button  Grid.Column="1" Grid.Row="1" x:Name="button" Content="Roll !" HorizontalAlignment="Center" VerticalAlignment="Center"  RenderTransformOrigin="0.811,0.976" Height="44" Width="412" FontSize="20" Margin="10,107" FontWeight="Bold" Focusable="False">
          <Button.Background>
             <ImageBrush ImageSource="/images/white-belt.jpg" />
          </Button.Background>
       </Button>
-      <Button Grid.Column="1"  Grid.Row="1"  x:Name="My_Techniques_button" Content="My Techniques" Margin="10,181,10,31" HorizontalAlignment="Center" VerticalAlignment="Center" RenderTransformOrigin="0.811,0.976" Click="button_Copy_Click" Height="46" Width="412" FontSize="20" FontWeight="Bold">
+      <Button Grid.Column="1"  Grid.Row="1"  x:Name="My_Techniques_button" Content="My Techniques" Margin="10,181,10,31" HorizontalAlignment="Center" VerticalAlignment="Center" RenderTransformOrigin="0.811,0.976" Click="button_Copy_Click" Height="46" Width="412" FontSize="20" FontWeight="Bold" Focusable="False">
          <Button.Background>
             <ImageBrush ImageSource="/images/blue-belt.jpg" />
          </Button.Background>
       </Button>
-      <Button Grid.Column="1"  Grid.Row="1" x:Name="Settings" Content="Statistics" HorizontalAlignment="Center" Margin="10,257,10,214" VerticalAlignment="Center"  RenderTransformOrigin="0.811,0.976" Height="44" Width="412" FontSize="20" Click="Settings_Click" Grid.RowSpan="2" FontWeight="Bold">
+      <Button Grid.Column="1"  Grid.Row="1" x:Name="Settings" Content="Statistics" HorizontalAlignment="Center" Margin="10,257,10,214" VerticalAlignment="Center"  RenderTransformOrigin="0.811,0.976" Height="44" Width="412" FontSize="20" Click="Settings_Click" Grid.RowSpan="2" FontWeight="Bold" Focusable="False">
          <Button.Background>
             <ImageBrush ImageSource="/images/purple-belt.jpg" />
          </Button.Background>
       </Button>
-      <Button x:Name="button1" Content="Mind Maps" Grid.Column="1" HorizontalAlignment="Left" Margin="10,76,0,0" Grid.Row="2" VerticalAlignment="Top" Width="412" Height="44" FontSize="20" FontWeight="Bold">
+      <Button x:Name="button1" Content="Mind Maps" Grid.Column="1" HorizontalAlignment="Left" Margin="10,76,0,0" Grid.Row="2" VerticalAlignment="Top" Width="412" Height="44" FontSize="20" FontWeight="Bold" Click="mindMaps_Click" Focusable="False">
          <Button.Background>
             <ImageBrush ImageSource="/images/brown-belt.jpg" />
          </Button.Background>
